--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.nimplex.xyz/"
+baseURL = "https://cansat.zsm.edu.pl/"
 languageCode = "pl-PL"
 theme = "terminal"
 pagerSize = 5
